fixing alignment for wide taxon search results

--- a/tool-ui/src/main/webapp/style/jquery.taxonomy.less
+++ b/tool-ui/src/main/webapp/style/jquery.taxonomy.less
@@ -7,7 +7,6 @@
         display: table-cell;
         list-style-type: none;
         margin-left: 0;
-        float:left;
     }
 
     li {
